package io.hedwig.dp.demos.structural.decorator;

/**
 * 1. author: patrick
 */
public class ComponentA implements Component {

  @Override
  public void operation() {
    System.out.println("Component A ");
  }
}
